--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+/* @custom-variant dark (&:is(.dark *)); */
 
 @layer utilities {
   .font-quanta {
@@ -56,27 +59,37 @@
 
   --font-inter: "Montserrat", sans-serif;
 
-  /* .dark {
-    --background: #0a0a0d;
-    --foreground: #fafafa;
-    --card: #0a0a0d;
-    --card-foreground: #fafafa;
-    --popover: #0a0a0d;
-    --popover-foreground: #fafafa;
-    --primary: #1d4ed8;
-    --primary-foreground: #19191d;
-    --secondary: #2a2a30;
-    --secondary-foreground: #fafafa;
-    --muted: #2a2a30;
-    --muted-foreground: #a3a3b3;
-    --accent: #2a2a30;
-    --accent-foreground: #fafafa;
-    --destructive: #992a2a;
-    --destructive-foreground: #fafafa;
-    --border: #2a2a30;
-    --input: #2a2a30;
-    --ring: #1d4ed8;
-  } */
+  --radius: 0.625rem;
+
+  --background: oklch(1 0 0);
+
+  --foreground: oklch(0.145 0 0);
+
+  --chart-1: oklch(0.646 0.222 41.116);
+
+  --chart-2: oklch(0.6 0.118 184.704);
+
+  --chart-3: oklch(0.398 0.07 227.392);
+
+  --chart-4: oklch(0.828 0.189 84.429);
+
+  --chart-5: oklch(0.769 0.188 70.08);
+
+  --sidebar: oklch(0.985 0 0);
+
+  --sidebar-foreground: oklch(0.145 0 0);
+
+  --sidebar-primary: oklch(0.205 0 0);
+
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+
+  --sidebar-accent: oklch(0.97 0 0);
+
+  --sidebar-accent-foreground: oklch(0.205 0 0);
+
+  --sidebar-border: oklch(0.922 0 0);
+
+  --sidebar-ring: oklch(0.708 0 0);
 }
 
 @font-face {
@@ -92,13 +105,6 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 body {
